Changing upvotes per minute to 0.5 to test the waters, added more formatting to the deal message