@@ -121,15 +121,16 @@ public class BotConfig {
         }
     }
 
-    @Scheduled(cron = "* */5 * * * * ")
+    @Scheduled(cron = "* */5 * * * *")
     public void checkOzb() {
         if (api != null) {
             Map<String, Deal> newDealsMap = ozbargainService.fetchDeals();
             for (Deal deal : newDealsMap.values()) {
                 long minsSinceDealPosted = Duration.between(deal.getPubDate(), ZonedDateTime.now()).toMinutes();
-                if (deal.getVotesPos() / minsSinceDealPosted  > UPVOTES_PER_MINUTE) {
+                if ((double) deal.getVotesPos() /  (double) minsSinceDealPosted  > UPVOTES_PER_MINUTE) {
                     api.getTextChannelById(CHANNEL_ID)
-                            .sendMessage("Hot bargain alert: %s\n%s".formatted(deal.getTitle(), deal.getDealUrl())).queue();
+                            .sendMessage(String.format(":rotating_light: **Hot Bargain Alert** :rotating_light: \n%s\n%s", deal.getTitle(), deal.getDealUrl())).queue();
+
                 }
             }
         }
